// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationLink component renders a disabled link when href is undefined 1`] = `
<EuiFlexGroup
  responsive={false}
>
  <EuiFlexItem
    grow={false}
  >
    <EuiIconTip
      content="Required data for this integration was not found."
      type="apmApp"
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiText
      color="subdued"
    >
      click for bar
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`IntegrationLink component renders without errors 1`] = `
<EuiLink
  aria-label="foo"
  data-test-subj="syntheticsIntegrationLinkLink"
  href="/app/foo?kuery=localhost"
>
  <EuiFlexGroup
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiIconTip
        content="info for bar"
        position="top"
        type="apmApp"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      click for bar
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiLink>
`;
